feat add code architecture task

--- a/configs/dynamic_config_fallback.json
+++ b/configs/dynamic_config_fallback.json
@@ -45,7 +45,7 @@
     "statement_timeout_ms": 500
   },
   "POSTGRES_HANDLERS_COMMAND_CONTROL": {
-    "/v1/hello": {
+    "/check": {
       "POST": {
         "network_timeout_ms": 500,
         "statement_timeout_ms": 250
